# Kentc

./: .gitignore  CMakeLists.txt  README.md  build.sh  byte-type.kent  in-test.kent  local-var.kent  milestone.txt  print-string.kent  selector-test.kent  v1.0-features.md  v1.0.kent  v2.0-features.md  v2.0.kent  v3.0-features.md  v3.0-test.kent  v3.0.kent  v4.0-features.md  v4.0.kent  var-op.kent
ELFBUILD/: ir.llvm
include/: Token.h  TokenType.h  stringUtils.h
src/: main.cpp  memoryAllocator.cpp
src/CompileOptimise/: AssemblyParser.cpp  AssemblyParser.h  BasicBlock.cpp  BasicBlock.h  Function.cpp  Function.h  Instruction.cpp  Instruction.h  Optimizer.cpp  Optimizer.h  callSequenceOptimization.cpp  constantPropagation.cpp  deadCodeElimination.cpp  peepHoleOptimization.cpp  statckOptimization.cpp
src/ExecutableGenerator/: ExecutableGenerator.cpp  ExecutableGenerator.h
src/IRgenerate/: IRGenerator.cpp  IRGenerator.h  IRWriter.cpp  IRWriter.h  generateExpr.cpp
src/LexerAnalyze/: Lexer.cpp  Lexer.hpp
src/StaticProgramAnalysis/: IRliveAnalyzor.cpp  IRliveAnalyzor.h  StaticProgramAnalyzer.cpp  StaticProgramAnalyzer.h
src/SyntaxAnalyze/: AstToJson.cpp  Parser.cpp  Parser.h
src/TargetGenerator/: AsmWriter.cpp  AsmWriter.h  CallingConvention.cpp  CallingConvention.h  HandleDivision.cpp  RegisterAllocator.cpp  RegisterAllocator.h  TargetGenerator.cpp  TargetGenerator.h  convertIRtoAsm.cpp  formatReg.cpp  handleFunctionCall.cpp  parseString.cpp  processGetElementPtr.cpp  processXor.cpp
src/TargetGenerator/AsmWriter/: AsmWriter.cpp  AsmWriter.h
src/TargetGenerator/ProcessIRLine/: HandleDivision.cpp  handleFunctionCall.cpp  processBinaryOp.cpp  processCall.cpp  processDefine.cpp  processGetElementPtr.cpp  processXor.cpp
src/TargetGenerator/RegisterAllocator/: RegisterAllocator.cpp  RegisterAllocator.h
src/TargetGenerator/include/: utils.cpp  utils.h
src/TargetGenerator/parseIRLine/: parseCall.cpp  parseFunctionDef.cpp  parseString.cpp
src/memoryAllocator/: mallocTest.cpp  memoryAllocator.cpp
src/utils/: stringUtils.cpp
